--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>devizhxn</title>
 </head>
 <body>
-    
+    <form action="#">
+        <input type="email" name="email" class="email i" />
+        <input type="password" name="password" class="pass i" />
+        <button class="btn" type="submit">Войти</button>
+    </form>
 </body>
 </html>
