--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>devizhxn</title>
 </head>
 <body>
-    
+    <div class="block">
+        <div class="block__1">
+            .block__1
+        </div>
+        <div class="block__2">
+            .block__2
+        </div>
+        <div class="block__3">
+            .block__3
+        </div>
+    </div>
 </body>
 </html>
