--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/null.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>devizhxn</title>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="choose">
+            <a href="#">Login</a>
+            <a href="#">Register</a>
+        </div>
+        <div class="hello">
+            <p>Good Morning!</p>
+            <p>Thank you for coming back!</p>
+        </div>
+        <div class="input">
+            <label for="email">Your Email</label><input type="email" name="email">
+            <label for="password">Password</label><input type="password" name="password">
+        </div>
+        <div class="forgot_pass">
+            <input type="checkbox" name="remember"><label for="remember">Remember Me?</label>
+            <a href="#">Forgot Password?</a>
+        </div>
+        <button class="login_btn">Login</button>
+    </div>
 </body>
 </html>
