--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <p>Good Morning!</p>
             <p>Thank you for coming back!</p>
         </div>
-
+        
+        <div class="chtoeto"></div>
 
         <form action="">
             <div class="email_block input">
@@ -33,14 +34,17 @@
             </div>
             <div class="forgot_pass">
                 <div class="">
-                    <input type="checkbox" name="remember">
+                    <input type="checkbox" id="remember">
                     <label for="remember">Remember Me?</label>
                 </div>
                 <a href="#">Forgot Password?</a>
             </div>
             <button class="login_btn">Login</button>
         </form>
-
+        <div class="logo">
+            <img src="image/Vector.png" alt="">
+            <p class="logo_text">FutureFlux</p>
+        </div>
     </div>
 </body>
 </html>
