--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main">
         <div class="choose">
             <a href="#" class="choose__link choose__link-active">Login</a>
-            <a href="#" class="choose__link">Register</a>
+            <a href="#" class="choose__link choose__link-active">Register</a>
         </div>
         <div class="hello">
             <p>Good Morning!</p>
