--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
             <div class="forgot_pass">
                 <div class="">
-                    <input type="checkbox" id="remember">
-                    <label for="remember">Remember Me?</label>
+                    <input type="checkbox" id="remember" class="forgot_pass__checkbox">
+                    <label for="remember" class="forgot_pass__label">Remember Me?</label>
                 </div>
                 <a href="#">Forgot Password?</a>
             </div>
